# FileSorter

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  presets.rs  resolve.rs  sort.rs  undo.rs
src-tauri/src/models/: mod.rs  operation.rs  rule.rs
src/lib/: types.ts  utils.ts
src/lib/components/: DropZone.svelte  PresetBar.svelte  RuleList.svelte  RuleRow.svelte  StatusBar.svelte
src/lib/stores/: app.svelte.ts  persistence.ts  rules.svelte.ts
src/routes/: +page.svelte
